feat: complete drum machine and logics between 3d and audio

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Simple Drum Machine</title>
   </head>
   <body>
-    <main>
-      <button id="startButton" disabled>load</button>
-    </main>
+    <!-- @TODO add header with instructions -->
+    <main id="app"></main>
+    <footer class="copyright-wrapper">
+      <p class="copyright">&copy; kennycha</p>
+      <p>|</p>
+      <a href="https://github.com/kennycha/simple-drum-machine" target="_blank"><p>Github</p></a>
+    </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
